moved maxed width back to wrap. fixes quote banner

--- a/src/scss/02-theme/03-components/_gen-con-blocks.scss
+++ b/src/scss/02-theme/03-components/_gen-con-blocks.scss
@@ -1,4 +1,5 @@
 .lib-gen-con--wrap {
+  max-width: rem(850);
   margin: 0;
 
   h1 {
@@ -15,7 +16,6 @@
 // }
 
 .lib-gen-con--block {
-  max-width: rem(850);
   margin-bottom: $space-4xl;
 
   .lib-block-title {
@@ -43,7 +43,7 @@
   @include clearfix;
 }
 
-.lib-text-img-right {
+.lib-text-img--right {
   .lib-gen-con--img-wrap {
     float: right;
     margin-left: $space-lg;
@@ -56,7 +56,7 @@
   }
 }
 
-.lib-text-img-left {
+.lib-text-img--left {
   .lib-gen-con--img-wrap {
     float: left;
     margin-right: $space-lg;
@@ -145,7 +145,6 @@
 }
 
 .lib-block--link-list {
-  // box-sizing: content-box;
   .lib-link-list {
     display: flex;
     flex-wrap: wrap;
@@ -160,6 +159,7 @@
     position: relative;
     width: 50%;
     margin-bottom: $space-md;
+    padding-right: $space-xs;
 
     @include media-breakpoint-only(xs) {
       width: 100%;
@@ -167,15 +167,18 @@
     }
 
     a {
+      display: inline-block;
       font-family: $heading-font;
       font-weight: 400;
+      line-height: 1.5;
       padding-left: $space-2xl;
       color: $link-color;
       text-decoration: none;
       transition: 0.3s ease;
 
       &::before {
-        @include vert_center();
+        position: absolute;
+        top: 0;
         font-family: 'FontAwesome';
         content: '\f15c';
         font-size: $fs-lg;
@@ -265,7 +268,7 @@
 .lib-block--quote {
 }
 
-.lib-block--quote-alt {
+.lib-block--quote-banner {
   padding: $space-2xl 0 $space-3xl;
   background-color: $warm-grey-100;
 
